# coreclr

./: build.sh
src/System.Private.CoreLib/: System.Private.CoreLib.csproj
src/debug/daccess/: nidump.cpp
src/dlls/mscoree/: mscorwks_ntdef.src  mscorwks_unixexports.src  unixinterface.cpp
src/gc/: gcenv.ee.standalone.inl  gchandletable.cpp  gchandletableimpl.h  gcinterface.dac.h  gcinterface.ee.h  gcinterface.h  objecthandle.cpp  objecthandle.h
src/gc/env/: gcenv.ee.h
src/gc/sample/: GCSample.cpp  gcenv.ee.cpp
src/inc/: CrstTypeTool.cs  CrstTypes.def  clrconfigvalues.h  corinfo.h  crsttypes.h  eventtrace.h  eventtracebase.h
src/inc/embeddingapi/: dotnet_embedding.h
src/jit/: importer.cpp
src/vm/: CMakeLists.txt  ClrEtwAll.man  appdomain.cpp  array.cpp  assembly.cpp  callhelpers.h  ceeload.cpp  ceemain.cpp  class.cpp  clsload.cpp  comcallablewrapper.cpp  comcallablewrapper.h  comutilnative.cpp  comutilnative.h  crossloaderallocatorhash.h  crossloaderallocatorhash.inl  ecalllist.h  embeddingapi.cpp  embeddingapi_impl.h  eventtrace.cpp  frames.h  gcenv.ee.cpp  gcenv.ee.h  gcenv.ee.standalone.cpp  gcenv.ee.static.cpp  gcheaphashtable.h  gcheaphashtable.inl  generics.cpp  jithelpers.cpp  jitinterface.cpp  jitinterface.h  loaderallocator.cpp  loaderallocator.hpp  marshalnative.cpp  method.cpp  methodtable.cpp  methodtable.h  methodtable.inl  methodtablebuilder.cpp  mscorlib.cpp  (+11 more)
src/vm/amd64/: asmconstants.h
src/vm/arm/: asmconstants.h
tests/src/Embedding/NativeClient/: CMakeLists.txt  EmbeddingNativeTest.csproj  embeddingapitests.cpp
(+27 files in other folders)
